--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   </head>
 
-  <body>
+  <body onload="fetchBookmarks()">
 
     <div class="container">
       <div class="header clearfix">
@@ -24,11 +24,12 @@
       </div>
 
       <div class="jumbotron">
-        <h2>Bookmark Your Favorite Sites</h2>
+        <h2>Bookmark Your Favorite Sites</h2
         <form id="myForm">
           <div class="form-group">
             <label>Site Name</label>
             <input type="text" class="form-control" id="siteName" placeholder="Website Name">
+            <span class="fa fa-bell"></span>
           </div>
           <div class="form-group">
             <label>Site URL</label>
