--- a/index.html
+++ b/index.html
@@ -1,16 +1,14 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <title>BookMarkerJS</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Site Bookmarker</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
-
   </head>
 
   <body onload="fetchBookmarks()">
@@ -18,18 +16,17 @@
     <div class="container">
       <div class="header clearfix">
         <nav>
-          
+
         </nav>
-        <h3 class="text-muted">BookMarker</h3>
+        <h3 class="text-muted">Bookmarker</h3>
       </div>
 
       <div class="jumbotron">
-        <h2>Bookmark Your Favorite Sites</h2
+        <h2>Bookmark Your Favorite Sites</h2>
         <form id="myForm">
           <div class="form-group">
             <label>Site Name</label>
             <input type="text" class="form-control" id="siteName" placeholder="Website Name">
-            <span class="fa fa-bell"></span>
           </div>
           <div class="form-group">
             <label>Site URL</label>
@@ -46,13 +43,14 @@
       </div>
 
       <footer class="footer">
-        <p>&copy; BookMarker 2017</p>
+        <p>&copy; 2017 Bookmarker, Inc.</p>
       </footer>
 
     </div> <!-- /container -->
+
     <script
-    src="https://code.jquery.com/jquery-3.2.1.js"
-    integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
+    src="https://code.jquery.com/jquery-3.1.1.js"
+    integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA="
     crossorigin="anonymous"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/main.js"></script>
